--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="logo">Lu-Teras</h1>
             </div>
             <nav class="header-nav">
-                <ul>
+                <ul class="nav-links">
                     <li><a href="#issues">課題</a></li>
                     <li><a href="#services">サービス</a></li>
                     <li><a href="#flow">導入の流れ</a></li>
@@ -28,7 +28,12 @@
                 </ul>
             </nav>
             <div class="header-cta">
-                <a href="https://timerex.net/s/sho.shoyo0919_992f/fa8fc3ab" class="button">無料相談を申し込む</a>
+                <a href="#" class="button">無料相談を申し込む</a>
+            </div>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
     </header>
