--- a/index.html
+++ b/index.html
@@ -182,20 +182,21 @@
                         <li>シンプルチャットボット導入</li>
                         <li>Notionの基本セットアップ</li>
                         <li>プロンプトテンプレート提供</li>
+                        <li>SNS自動投稿用プロンプト作成</li>
                         <li>Webサイト制作(別途10万円〜)</li>
                     </ul>
                 </div>
                 <div class="price-card">
-                    <h3 class="price-title">スタンダードプラン</h3>
-                    <p class="price-amount">¥100,000</p>
-                    <p class="price-monthly">月額: ¥40,000</p>
+                    <h3 class="price-title">プロプラン</h3>
+                    <p class="price-amount">¥300,000</p>
+                    <p class="price-monthly">月額: ¥150,000</p>
                     <ul class="price-features">
                         <li>AI導入コンサルティング</li>
                         <li>月2回のZoom相談</li>
                         <li>専用プロンプト設計</li>
                         <li>データ分析サポート</li>
                         <li>チャットボット・Notionセットアップ</li>
-                        <li>Webサイト制作(別途8万円〜)</li>
+                        <li>Webサイト制作or専用アプリ(予約・在庫管理)(別途8万円〜)</li>
                     </ul>
                 </div>
             </div>
